--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,3 +10,8 @@ background-color: aqua
 .item-3 {
     background-color: chocolate
 }
+
+.mat-toolbar-row, .mat-toolbar-single-row {
+    height: 64px;
+    background-color: #0D4F41;
+}
