Incluindo ngx-mask

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar  color="primary" mat-green  class="fixed-header">
+<mat-toolbar  color="primary"  class="fixed-header">
   <mat-toolbar-row>
   <span><img  src="./assets/logo.png" ></span>
   <a  mat-button  routerLink="/customer-list"  routerLinkActive="active">Customers</a>
