--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,6 @@
-.item {
-    border: 1px black
-}
-.item-1 {
-background-color: aqua
-}
-.item-2 {
-    background-color: crimson
-}
-.item-3 {
-    background-color: chocolate
+img.logo {
+    padding-top: 4px;
+    padding-left: 4px;
 }
 
-.mat-toolbar-row, .mat-toolbar-single-row {
-    height: 64px;
-    background-color: #0D4F41;
-}
+a { cursor: pointer }
